--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 FLEX/zad1/scan
 FLEX/zad1/text
 FLEX/zad1/out
+BISON/texput.log
+BISON/calc_flex.c
+BISON/calc_bison.h
+BISON/calc_bison.c
+BISON/calc
